--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,116 +3,144 @@
 @tailwind utilities;
 
 @layer components {
-    * {
-        @apply box-border
-    }
-    
-    html {
-        @apply overflow-x-hidden font-inter scroll-smooth
-    }
+	* {
+		@apply box-border;
+	}
 
-    ::-webkit-scrollbar {
-        width: 10px;
-      }
-      
-    ::-webkit-scrollbar-track {
-        @apply bg-[#2b2b2b]
-    }
-      
-    ::-webkit-scrollbar-thumb {
-        @apply bg-[#40E9F1]
-    }
-      
-    ::-webkit-scrollbar-thumb:hover {
-        @apply bg-[#D7BDF2]
-    }
-    
-    .nav-link {
-        @apply uppercase text-gray-400 text-sm tracking-widest
-    }
+	html {
+		@apply overflow-x-hidden font-inter scroll-smooth;
+	}
 
-    .nav-link-active {
-        @apply text-white
-    }
+	::-webkit-scrollbar {
+		width: 10px;
+	}
 
-    .btn-primary {
-        @apply border-2 border-[#40E9F1] text-[#40E9F1] uppercase rounded-md hover:border-2 hover:border-white hover:bg-[#06a6ae] hover:text-white
-    }
+	::-webkit-scrollbar-track {
+		@apply bg-[#2b2b2b];
+	}
 
-    .heading {
-        text-shadow: 0px 1px 10px #40E9F1;
-    }
+	::-webkit-scrollbar-thumb {
+		@apply bg-[#40E9F1];
+	}
 
-    .primary-input {
-        @apply bg-black text-white border-[1px] border-[#40E9F1] rounded-xl w-full py-4 text-lg text-center focus:outline-none
-    }
+	::-webkit-scrollbar-thumb:hover {
+		@apply bg-[#D7BDF2];
+	}
 
-    input::placeholder {
-        @apply text-white capitalize opacity-100 font-inter
-    }
+	.nav-link {
+		@apply uppercase text-gray-400 text-sm tracking-widest;
+	}
 
-    .btn-shape {
-        clip-path: polygon(4% 0, 96% 0, 100% 6%, 100% 94%, 96% 100%, 4% 100%, 0 94%, 0 6%);
-    }
+	.nav-link-active {
+		@apply text-white;
+	}
 
-    .btn-text-shadow {
-        text-shadow: 0px 2px 4px #00000034;
-    }
+	.btn-primary {
+		@apply border-2 border-[#40E9F1] text-[#40E9F1] uppercase rounded-md hover:border-2 hover:border-white hover:bg-[#06a6ae] hover:text-white;
+	}
 
-    .btn-secondary {
-        @apply uppercase relative btn-shape text-[#FBFFFF] bg-[#40E9F1] btn-text-shadow tracking-wider text-lg
-    }
+	.heading {
+		text-shadow: 0px 1px 10px #40e9f1;
+	}
 
-    .btn-secondary::before {
-        content: "sign up";
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 48px;
-        width: 218px;
-        position: absolute;
-        top: 1px;
-        left: 1px;
-        background-color: rgba(14, 79, 94, 1);
-        clip-path: polygon(4% 0, 96% 0, 100% 6%, 100% 94%, 96% 100%, 4% 100%, 0 94%, 0 6%);
-    }
+	.primary-input {
+		@apply bg-black text-white border-[1px] border-[#40E9F1] rounded-xl w-full py-4 text-lg text-center focus:outline-none;
+	}
 
-    .btn-secondary::after {
-        content: "";
-        height: 48px;
-        width: 48px;
-        position: absolute;
-        top: 1px;
-        left: 40%;
-        background-image: linear-gradient(to right, rgba(11, 82, 189, 0), rgba(11, 82, 189, 1), rgba(11, 82, 189, 0));
-        opacity: 0.2;
-    }
+	input::placeholder {
+		@apply text-white capitalize opacity-100 font-inter;
+	}
 
-    .footer-bg {
-        background-color: rgba(255, 255, 255, 0.04)
-    }
+	.btn-shape {
+		clip-path: polygon(
+			4% 0,
+			96% 0,
+			100% 6%,
+			100% 94%,
+			96% 100%,
+			4% 100%,
+			0 94%,
+			0 6%
+		);
+	}
 
-    .right::before {
-        content: "";
-        position: absolute;
-        top: 3px;
-        right: 18px;
-        background-color: rgba(255, 255, 255, 1);
-        width: 100%;
-        height: 1px;
-    }
+	.btn-text-shadow {
+		text-shadow: 0px 2px 4px #00000034;
+	}
 
-    .left::before {
-        content: "";
-        position: absolute;
-        top: 3px;
-        left: 18px;
-        background-color: rgba(255, 255, 255, 0.6);
-        width: 100%;
-        height: 1px;
-    }
+	.btn-secondary {
+		@apply uppercase relative btn-shape text-[#FBFFFF] bg-[#40E9F1] btn-text-shadow tracking-wider text-lg;
+	}
 
-    .error {
-        @apply text-[#40E9F1] text-sm text-center py-1
-    }
+	.btn-secondary::before {
+		content: "sign up";
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 48px;
+		width: 218px;
+		position: absolute;
+		top: 1px;
+		left: 1px;
+		background-color: rgba(14, 79, 94, 1);
+		clip-path: polygon(
+			4% 0,
+			96% 0,
+			100% 6%,
+			100% 94%,
+			96% 100%,
+			4% 100%,
+			0 94%,
+			0 6%
+		);
+	}
+
+	.btn-secondary::after {
+		content: "";
+		height: 48px;
+		width: 48px;
+		position: absolute;
+		top: 1px;
+		left: 40%;
+		background-image: linear-gradient(
+			to right,
+			rgba(11, 82, 189, 0),
+			rgba(11, 82, 189, 1),
+			rgba(11, 82, 189, 0)
+		);
+		opacity: 0.2;
+	}
+
+	.footer-bg {
+		background-color: rgba(255, 255, 255, 0.04);
+	}
+
+	.right::before {
+		content: "";
+		position: absolute;
+		top: 3px;
+		right: 18px;
+		background-color: rgba(255, 255, 255, 1);
+		width: 100%;
+		height: 1px;
+	}
+
+	.left::before {
+		content: "";
+		position: absolute;
+		top: 3px;
+		left: 18px;
+		background-color: rgba(255, 255, 255, 0.6);
+		width: 100%;
+		height: 1px;
+	}
+
+	.error {
+		@apply text-[#40E9F1] text-sm text-center py-1;
+	}
+}
+body {
+	background-color: black;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
