--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,34 +1,14 @@
 #about {
 	display: grid;
-	/* grid-template-columns: 1fr 6px 1fr; */
 	grid-template-rows: 5px 1fr 5px;
-
 	color: white;
 	width: 100%;
 	padding: 0 96px;
 	margin: 1em 0;
 }
 
-#about > div {
-	/* border: white 1px solid; */
-	width: 100%;
-	height: 100%;
-	min-height: max-content;
-	/* border-top: 1px rgba(255, 255, 255, 0.9) solid; */
-	/* border-bottom: 1px rgba(64, 233, 241, 0.9) solid; */
-}
-
-#text-container {
-	padding: 1em;
-}
-
-#picture-container {
-	border: none;
-}
 #middle-border {
-	/* background-color: wheat; */
 	display: grid;
-
 	grid-template-rows: 25fr 50fr 25fr;
 }
 
@@ -52,20 +32,17 @@
 #top-border-1 {
 	width: calc(100% - 4px);
 	grid-row: 1;
-	background-color: rgba(255, 255, 255, 0.9);
 	grid-column: 1;
 	margin-bottom: 1px;
 }
 #top-border-2 {
 	width: 100%;
-	background-color: rgba(255, 255, 255, 0.9);
 	grid-row: 1 / 3;
 	grid-column: 2;
 	border-top-left-radius: 1em;
 }
 #top-border-3 {
 	width: 100%;
-	background-color: rgba(255, 255, 255, 0.9);
 	margin-top: 1px;
 	grid-column: 1;
 	grid-row: 2;
@@ -74,6 +51,9 @@
 	display: grid;
 	grid-template-columns: 2fr 1fr;
 	grid-template-rows: 1fr 1fr;
+}
+#top-border > div {
+	background-color: rgba(255, 255, 255, 0.9);
 }
 #about-content {
 	grid-template-columns: 1fr 6px 1fr;
